feat : auth hanlding
